# entservices-deviceinfo

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  PRODUCT.md  REVIEW_REPORT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md
.github/workflows/: L1-tests.yml  L2-tests-oop.yml  L2-tests.yml  daily-merged-pr-report.yml  daily-workflow-report.yml  native_full_build.yml
DeviceInfo/: DeviceInfoImplementation.cpp
Tests/: README.md
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: test_DeviceAudioCapabilities.cpp  test_DeviceInfo.cpp  test_DeviceVideoCapabilities.cpp
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: DeviceInfo_L2Test.cpp
cmake/: FindWPEFrameworkHelpers.cmake
plugin/: CMakeLists.txt  DeviceAudioCapabilities.cpp  DeviceAudioCapabilities.h  DeviceInfo.conf.in  DeviceInfo.config  DeviceInfo.cpp  DeviceInfo.h  DeviceInfoImplementation.cpp  DeviceInfoImplementation.h  DeviceVideoCapabilities.cpp  DeviceVideoCapabilities.h
